[gd_scene load_steps=5 format=3 uid="uid://hg2schw8qdvn"]

[ext_resource type="Script" path="res://core/ui/menu/store/store_menu.gd" id="1_cl0ln"]
[ext_resource type="Theme" uid="uid://bko0q7gp1hwjp" path="res://assets/themes/dracula.tres" id="2_3di5k"]
[ext_resource type="PackedScene" uid="uid://df5o1o2dsik84" path="res://core/ui/components/button.tscn" id="3_rolvk"]
[ext_resource type="PackedScene" uid="uid://bugbaxcj7rtbq" path="res://core/ui/components/loading01.tscn" id="4_c22vd"]

[node name="StoreMenu" type="Control" groups=["store_menu"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cl0ln")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_3di5k")

[node name="StoresContent" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="ScrollContainer" type="ScrollContainer" parent="StoresContent"]
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="HFlowContainer" type="HFlowContainer" parent="StoresContent/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16

[node name="Button" parent="StoresContent/ScrollContainer/HFlowContainer" instance=ExtResource("3_rolvk")]
layout_mode = 2
text = "Test Store"

[node name="HomeContent" type="MarginContainer" parent="."]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="ScrollContainer" type="ScrollContainer" parent="HomeContent"]
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="HFlowContainer" type="HFlowContainer" parent="HomeContent/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16

[node name="Loading01" parent="." instance=ExtResource("4_c22vd")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
